--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -28,8 +28,8 @@
 }
 
 .project-grid-item-title {
-  letter-spacing: 2px;
-  font-size: 1.4em;
+  letter-spacing: 1.5px;
+  font-size: 1em;
 }
 
 .project-grid-item-image {
@@ -164,6 +164,9 @@
   .what-are-units {
     margin-bottom: 40px;
     margin-top: 40px;
+    a {
+      color: $primary-blue;
+    }
   }
 
   h1 {
