--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,7 +10,7 @@
 
   <p class="centered what-are-units">
     <a data-toggle="modal" data-modal-id="modal-units">
-      What are units?
+      What is a unit?
     </a>
   </p>
 
@@ -36,7 +36,15 @@
 </div>
 
 
-  <%= render "shared/modal", id: "modal-units", title: "What are Units?", body: "You can do lessons in any order that you please. \n However, by following the units in order, students experience a scaffolded learning structure that gradually adds complexity without overwhelming them. \n By the end of the 2016 school year, there will be over a year’s worth of weekly, scaffolded art lessons. Project development is ongoing, and projects will continue to be be added to each unit so that educators can choose projects fitting into their specific classroom's learning objectives. \n Sign up to receive notifications of new projects by email." %>
+  <%= render "shared/modal", id: "modal-units", title: "What is a Unit?", body: "You can do lessons in any order that you please. 
+  However, by following the units in order, students experience a scaffolded learning structure that gradually adds complexity 
+  without overwhelming them.
+  
+  For 30 weeks (aprox. one school-year’s) worth of weekly art lessons, choose one project from each unit.
+
+  Project development is ongoing, and projects will continue to be be added to each unit so that educators can choose projects 
+  fitting into their specific classroom's learning objectives. Sign up to receive notifications of new projects by email."
+  %>
 
 
   <div class="modal" id="academy-select">
