--- a/app/assets/stylesheets/artroom.scss
+++ b/app/assets/stylesheets/artroom.scss
@@ -135,6 +135,10 @@
     margin: 5px 0 0 0;
   }
 
+  p.favorite-project-title {
+    max-width: 100px;
+  }
+
   p.favorite-academy {
     font-size: 75%;
   }
