--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -65,7 +65,7 @@
                 </div>
 
                 <% if current_user %>
-                  <div class="btn save-project">
+                  <div class="btn save-project save-project-lower">
                       <a rel="nofollow" class="modal-favorite-star" id="modal-lower-favorite-star" href="#"><span></span> Save Project</a>
                   </div>
                 <% end %>
@@ -78,7 +78,7 @@
                 </div>
 
                 <% if current_user %>
-                  <div class="btn save-project">
+                  <div class="btn save-project save-project-upper">
                       <a rel="nofollow" class="modal-favorite-star" id="modal-upper-favorite-star" href="#"><span></span> Save Project</a>
                   </div>
                 <% end %>
