--- a/app/assets/stylesheets/artroom.scss
+++ b/app/assets/stylesheets/artroom.scss
@@ -135,6 +135,14 @@
     margin: 5px 0 0 0;
   }
 
+  p.favorite-project-title {
+    font-size: 1em;
+    max-width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   p.favorite-academy {
     font-size: 75%;
   }
