added star text instead of glyphicon

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -66,7 +66,7 @@
 
                 <% if current_user %>
                   <div class="btn save-project save-project-lower">
-                      <a rel="nofollow" class="modal-favorite-star" id="modal-lower-favorite-star" href="#"><span></span> Save Project</a>
+                      <a rel="nofollow" class="modal-favorite-star" id="modal-lower-favorite-star"><span>☆</span> Save Project</a>
                   </div>
                 <% end %>
               </div>
@@ -79,7 +79,7 @@
 
                 <% if current_user %>
                   <div class="btn save-project save-project-upper">
-                      <a rel="nofollow" class="modal-favorite-star" id="modal-upper-favorite-star" href="#"><span></span> Save Project</a>
+                      <a rel="nofollow" class="modal-favorite-star" id="modal-upper-favorite-star"><span>☆</span> Save Project</a>
                   </div>
                 <% end %>
               </div>
