--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -28,8 +28,8 @@
 }
 
 .project-grid-item-title {
-  letter-spacing: 2px;
-  font-size: 1.4em;
+  letter-spacing: 1.5px;
+  font-size: 1em;
 }
 
 .project-grid-item-image {
@@ -174,6 +174,9 @@
   .what-are-units {
     margin-bottom: 40px;
     margin-top: 40px;
+    a {
+      color: $primary-blue;
+    }
   }
 
   h1 {
@@ -192,9 +195,9 @@
   }
 
   iframe {
-    width: 80vw;
+    width: 960px;
     margin: 0 auto;
-    height: calc(80vw / 1.78);
+    height: calc(960px / 1.78);
   }
 
 }
@@ -220,9 +223,14 @@
         text-align: left;
       }
     }
+    
+    #project-featured-image-modal {
+      max-height: 150px;
+      width: auto;
+    }
 
     .select-grade {
-      margin-top: 100px;
+      margin-top: 75px;
     }
   }
 }
