cleaned up old code

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -158,8 +158,12 @@
       color: gray;
     }
 
-  .favorite {
+  .favorite, #favorite_nonuser {
     color: $primary-blue;
+  }
+
+  #favorite_nonuser {
+    cursor: pointer;
   }
 
   .fave-a {
