--- a/app/views/shared/_feedback.html.erb
+++ b/app/views/shared/_feedback.html.erb
@@ -1,22 +1,25 @@
   
   <section id="feedback">
-    <form action="mailto:info@doodles-academy.org" method="post" enctype="text/plain" >
+    <%= form_tag("/feedback", method: "post") do %>
       <% if controller_name == 'lessons' %>
         <div>
-          <h3>was this lesson clear?</h3>
-          <input type="radio" NAME="was lesson clear?" VALUE="y" />Yes
-          <input type="radio" NAME="was lesson clear?" VALUE="n" />No
+          <h3>Was this lesson clear?</h3>
+          <input type="radio" name="was_lesson_clear" value="yes" />Yes
+          <input type="radio" name="was_lesson_clear" value="no" />No
         </div>
+        <% if local_assigns[:lesson].present? %>
+          <%= hidden_field_tag :lesson_id, lesson.id %>
+        <% end %>
         <div class="field">
          <h3>We welcome feedback!</h3>
       <% else %>
         <div class="field">
         <h3>We welcome feedback and suggestions for new features!</h3>
       <% end %>
-        <textarea rows="4" name="feedback" placeholder="Your input here..."></textarea>
+        <textarea rows="4" name="message" placeholder="Your feedback here..."></textarea>
       </div>
       <div class="actions">
         <input type="submit" value="submit" />
       </div>
-    </form>
+    <% end %>
   </section>
