added 'volunteer oppotunities' to nav drop-down

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -33,6 +33,7 @@
         <a href="/contact">contact us</a>
         <div class="dropdown-content">
           <a href="/contact" hidden>get in touch</a>
+          <a href="http://www.volunteermatch.org/search/org960297.jsp#opportunities_tab" target="blank" hidden>volunteer opportunities</a>
           <a href="/classes" hidden>PDX Classes</a>
         </div>
       </div>
