changed text on modal pop-up

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -179,10 +179,10 @@
   <div class="modal-content">
     <div class="modal-close"></div>
     <div class="modal-title">
-      <h1>Sign in to access this feature!</h1>
+      <h1>Sign up for a free account to access this feature!</h1>
     </div>
     <div class="modal-body">
-    <h2><a href="/users/sign_in">Sign in</a> or <a href="/users/sign_up">sign up</a> with us to favorite<span class="glyphicon glyphicon-star"></span> a project!</h2>
+    <h2><a href="/users/sign_up">Sign up for a free account</a> or (<a href="/users/sign_in">sign in</a>) to ★ save a project for later!</h2>
     </div>
   </div>
 </div>
