adding tpt-link

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,4 +1,9 @@
-
+.project-wrapper {
+  #tpt-link {
+      color: $primary-blue;
+      font-size: 18px;
+    }
+}
 
 .project-grid-item {
   display: inline-block;
