--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -69,6 +69,11 @@
     <%= f.text_field :books_media %>
   </div>
 
+  <div class="field">
+    <%= f.label :teachers_pay_teachers_link %>
+    <%= f.text_field :teachers_pay_teachers_link %>
+  </div>
+
   <div>
     <div class="field photocopy-admin">
       <%= f.label "Photocopy 1" %>
