--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -183,12 +183,12 @@
 
   <div class="field">
     <%= f.label :art_elements %>
-    <%= f.text_field :art_elements %>
+    <%= f.text_field :art_elements, 'data-uk-htmleditor' => '{markdown:true}'  %>
   </div>
 
   <div class="field">
     <%= f.label :art_principles %>
-    <%= f.text_field :art_principles %>
+    <%= f.text_field :art_principles, 'data-uk-htmleditor' => '{markdown:true}'  %>
   </div>
 
   <div class="field">
