--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -143,12 +143,12 @@
 
       <% if @project.art_elements.present? %>
         <h2 id='project-art-elements'>art elements</h2>
-        <p><%= @project.art_elements %></p>
+        <p><%= markdown @project.art_elements %></p>
       <% end %>
 
       <% if @project.art_principles.present? %>
         <h2 id='project-art-princples'>art principles</h2>
-        <p><%= @project.art_principles %></p>
+        <p><%= markdown @project.art_principles %></p>
       <% end %>
 
     </div>
