--- a/app/assets/stylesheets/donors.scss
+++ b/app/assets/stylesheets/donors.scss
@@ -4,6 +4,7 @@
     text-align: center;
     text-transform: none;
     font-weight: 300;
+    margin-left: -100px;
     margin-bottom: 1.3em;
 
     &:nth-of-type(2) {
