--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 
   <section>
     <div class="homepage-content">
-      <h2>Doodles Academy is a powerful art curriculum for for grades 1-5.</h2>
+      <h2>Doodles Academy is a powerful art curriculum for grades 1-5</h2>
       <p>
         Our program is designed to minimize teacher prep, and to prepare educators of all backgrounds to offer their students a high-quality art experience. Our lessons include:
       </p>
