--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -24,16 +24,16 @@
       <div class="col-md-2 col-xs-3 dropdown">
         <a href="/about">about us</a>
         <div class="dropdown-content">
-          <a href="/about" hidden>our story</a>
-          <a href="/supporters" hidden>supporters</a>
+          <a href="/about" hidden>our story<hr></a>
+          <a href="/supporters" hidden>supporters<hr></a>
           <a href="/team" hidden>team</a>
         </div>
       </div>
       <div class="col-md-2 col-xs-3 dropdown">
         <a href="/contact">contact us</a>
         <div class="dropdown-content">
-          <a href="/contact" hidden>get in touch</a>
-          <a href="http://www.volunteermatch.org/search/org960297.jsp#opportunities_tab" target="blank" hidden>volunteer opportunities</a>
+          <a href="/contact" hidden>get in touch<hr></a>
+          <a href="http://www.volunteermatch.org/search/org960297.jsp#opportunities_tab" target="blank" hidden>volunteer opportunities<hr></a>
           <a href="/classes" hidden>PDX Classes</a>
         </div>
       </div>
