--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -76,20 +76,18 @@
         min-width: 100%;
         border-radius: 0 0 40px 40px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        padding: 12px 16px;
         margin-top: 24px;
         z-index: 1;
 
         a {
           display: block;
-          text-transform: lowercase;
+          text-transform: capitalize;
           font-size: 1.1em;
-          margin-top: 20px;
-          margin-bottom: 40px;
+          margin: 30px;
+        }
 
-          &:last-child {
-            margin-bottom: 30px;
-          }
+        hr {
+          margin: 30px 10px;
         }
     }
   }
