--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -184,7 +184,7 @@
     margin-bottom: 40px;
     margin-top: 40px;
     a {
-      color: $primary-blue;
+      color: black;
     }
   }
 
@@ -196,7 +196,7 @@
   }
 
   h2 {
-    text-align: left;
+    text-align: center;
     font-weight: 800;
     font-size: 2.5em;
     line-height: 1.1;
