--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,34 +2,32 @@
 <% content_for(:hero_image) { image_tag 'heros/about.jpg' } %>
 
 <div class='about-wrapper'>
-<h2>Our Story</h2>
+  <h2>Our Story</h2>
 
-<p>Founder Tempest NeuCollins received an MFA from the School of Visual Arts in New York City. Through her varied teaching experience in private classes and charter school classrooms, she became frustrated that so much art education is incredibly costly and inefficient or overcrowded with little opportunity for differentiation. She became determined to find a way to offer an affordable, open-ended curriculum that would bring art education to more students.</p>
+  <p>Founder Tempest NeuCollins received an MFA from the School of Visual Arts in New York City. Through her varied teaching experience in private classes and charter school classrooms, she became frustrated that so much art education is incredibly costly and inefficient or overcrowded with little opportunity for differentiation. She became determined to find a way to offer an affordable, open-ended curriculum that would bring art education to more students.</p>
 
-<iframe src="https://player.vimeo.com/video/151472643" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <iframe src="https://player.vimeo.com/video/151472643" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-<h2>The Doodles Difference</h2>
-<p>Doodles Academy offers a high-quality art curriculum that is free and online, bringing arts education to more students in more places. Designed to be used in any educational context—from the homeschooler's living room to the public school classroom—the Doodles curriculum offers educators structure and guidance without compromising student creativity. Too much art education revolves around projects that focus on product and not process, erasing student individuality; Doodles Academy offers a holistic art education.</p>
+  <h2>The Doodles Difference</h2>
+  <p>Doodles Academy offers a high-quality art curriculum that is free and online, bringing arts education to more students in more places. Designed to be used in any educational context—from the homeschooler's living room to the public school classroom—the Doodles curriculum offers educators structure and guidance without compromising student creativity. Too much art education revolves around projects that focus on product and not process, erasing student individuality; Doodles Academy offers a holistic art education.</p>
 
-<%= image_tag 'pages/about2.jpg', class: 'left-set' %>
-<p>Doodles makes it easy, with clear and comprehensive lesson plans that fulfill Common Core standards. They include sample images, timelines, instructional videos for students, and demo videos for educators. All projects have been thoroughly tested, and solutions to common student problems are addressed in the lesson plans.</p>
+  <%= image_tag 'pages/about2.jpg' %>
+  <p>Doodles makes it easy, with clear and comprehensive lesson plans that fulfill Common Core standards. They include sample images, timelines, instructional videos for students, and demo videos for educators. All projects have been thoroughly tested, and solutions to common student problems are addressed in the lesson plans.</p>
 
-<h2>The Impact of Art</h2>
-<p>As funding continues to fall, the recognition of how vital arts education is continues to grow. Students who are given a high-quality arts education perform better on standardized tests. They develop creative problem solving, independent thinking, and growth mindset. Let Doodles Academy help you offer the best to your students.</p>
+  <h2>The Impact of Art</h2>
+  <p>As funding continues to fall, the recognition of how vital arts education is continues to grow. Students who are given a high-quality arts education perform better on standardized tests. They develop creative problem solving, independent thinking, and growth mindset. Let Doodles Academy help you offer the best to your students.</p>
 
-<section style="padding: 100px 0 150px;">
-  <div class="homepage-content" style="text-align: center;">
-    <div style="display: inline">
-      <a class="btn btn-xl btn-gray" style="color:gray;" href='/projects'>
-        Go to Lesson Plans
+  <div class="button-div">
+    <div>
+      <a class="btn btn-xl btn-gray" href="/projects">
+        Lesson Plans
       </a>
     </div>
-    <div style="display: inline">
-      <a class="btn btn-xl btn-blue" style="margin-left: 60px;" href="https://squareup.com/store/doodles-academy">
+    <div>
+      <a class="btn btn-xl btn-blue" href="https://squareup.com/store/doodles-academy">
         Donate Now
       </a>
     </div>
   </div>
-</section>
 
 </div>
