--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,7 @@
 <% content_for(:hero_image) { image_tag 'heros/project.jpg' } %>
 
 <div class="projects-index">
-  <h1 class="centered">an overview:</h1>
+  <h1 class="centered">An overview</h1>
 
  <div>
    <iframe src="https://player.vimeo.com/video/169613263?" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
