--- a/app/assets/stylesheets/members.scss
+++ b/app/assets/stylesheets/members.scss
@@ -66,3 +66,14 @@
 .member-bio {
   display: none;
 }
+
+ul.volunteer_members {
+  text-align: left;
+  margin: 0 0 3.5em 0;
+  column-count: 3;
+
+  li {
+    list-style: none;
+    break-inside: avoid;
+  }
+}
