added new quote to home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -114,9 +114,9 @@ community center that needs it.
          <a id='dot0'><%= image_tag 'dot.png'%></a>
          <a id='dot1'><%= image_tag 'dot.png'%></a>
          <a id='dot2'><%= image_tag 'dot.png'%></a>
+         <a id='dot3'><%= image_tag 'dot.png'%></a>
        </div>
      </div>
    </section>
-
 
 </div>
