--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -94,7 +94,7 @@ community center that needs it.
         <br><br>
         Without donors like you, this would be impossible.
         <br><br>
-        <a class="btn btn-xl btn-white" href="https://squareup.com/store/doodles-academy">
+        <a class="btn btn-xl btn-white" href="https://www.generosity.com/education-fundraising/a-space-to-doodle-has-never-been-more-necessary">
            Donate Now
          </a>
        </p>
