--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div id="nav-donate-btn" class="col-md-2 col-xs-3">
-        <a href="https://squareup.com/store/doodles-academy">donate</a>
+        <a href="https://www.generosity.com/education-fundraising/a-space-to-doodle-has-never-been-more-necessary">donate</a>
       </div>
     </div>
   </div>
