getting rid of bower, using node/yarn instead

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,8 +1,8 @@
 //=require_tree ./mixins
 //= require bootstrap/dist/css/bootstrap
-//= require uikit/css/uikit
+//= require uikit/dist/css/uikit
 //= require codemirror/lib/codemirror
-//= require uikit/css/components/htmleditor
+//= require uikit/dist/css/components/htmleditor
 
 @import "mixins/*";
 @import 'colors';
