--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -111,9 +111,10 @@ community center that needs it.
        </blockquote>
        <div class="quoted-parent"></div>
        <div class='dots'>
-         <a id='dot0'><%= image_tag 'dot.png'%></a>
-         <a id='dot1'><%= image_tag 'dot.png'%></a>
-         <a id='dot2'><%= image_tag 'dot.png'%></a>
+         <a class='dot' id='dot0'><%= image_tag 'dot.png'%></a>
+         <a class='dot' id='dot1'><%= image_tag 'dot.png'%></a>
+         <a class='dot' id='dot2'><%= image_tag 'dot.png'%></a>
+         <a class='dot' id='dot3'><%= image_tag 'dot.png'%></a>
        </div>
      </div>
    </section>
