--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -40,6 +40,9 @@
     <a href=<%= member.linked_in_profile %>>
       <%= member.name %>
     </a>
+    <a href=<%= member.personal_website %>>
+      <%= member.personal_website %>
+    </a>
   </li>
   <% end %>
 </ul>
