added a donate_link helper & changed links

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,12 @@
   <div class="footer-copyright centered">
     <hr class="footer-separator">
     <div class="footer-organization"
-      <span class="uppercase">Doodles Academy</span> is a 501(c)(3) nonprofit organization.
+      <span class="uppercase">Doodles Academy</span> 
+      is a 501(c)(3) nonprofit organization.
+      We are committed to providing educational resources under OER, 
+      and as such all content is licensed under a Creative Commons 
+      Attribution-NonCommercial-ShareAlike 4.0 International License (CC BY-NC-SA 4.0).
+      EIN: 47-4434306
     </div>
     <div class="footer-social">
 
