--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -24,7 +24,7 @@
       </a>
     </div>
     <div>
-      <a class="btn btn-xl btn-blue" href="https://www.generosity.com/education-fundraising/a-space-to-doodle-has-never-been-more-necessary">
+      <a class="btn btn-xl btn-blue" href=<%= donate_link %>>
         Donate Now
       </a>
     </div>
