Add paid-specific elements to artroom

--- a/app/views/users/artroom.html.erb
+++ b/app/views/users/artroom.html.erb
@@ -163,33 +163,55 @@
 
     </section>
 
-   <section>
-      <h1>in progress</h1>
-        <div class="favorite-in-artroom">
-          <% @lesson = Lesson.find_by_id(current_user.last_lesson_id) %>
-          <% if @lesson %>
-            <% @lesson_project = Project.find_by_id(@lesson.project_id) %>
-            <a href="/<%= @lesson.level %>/projects/<%= @lesson_project.slug %>/lessons/<%= @lesson.slug %>">
-              <%= image_tag(@lesson.example_image, size: "100x100") %>
-              <p class="favorite-project-title"><%= @lesson.title %></p>
-              <p class="favorite-academy"><%= @lesson.level.capitalize %> Academy</p>
-            </a>
-          <% end %>
-        </div>
-    </section>
 
-    <section>
-      <h1>★ saved projects</h1>
-      <% current_user.favorites.each do |favorite| %>
-        <div class="favorite-in-artroom">
-          <a href="/<%= favorite.level %>/projects/<%= favorite.slug %>">
-          <%= image_tag(favorite.project_set.project_image, size: "100x100") %>
-          <p class="favorite-project-title"><%= favorite.title %></p>
-          <p class="favorite-academy"><%= favorite.level.capitalize %> Academy</p>
-          </a>
-        </div>
+    <% if current_user.is_paid? %>
+      <section>
+        <h1>scope & sequence</h1>
+        <a href='https://docs.google.com/document/d/1jfSyfZiFMVU1vFQz9YNRumgd73RYaxtb3TRko82i7X0/edit?ts=59a2d57f'>Upper Academy</a>
+        <a href='https://docs.google.com/document/d/1rnliIt1ocX-Sc5riKXhsJv16tPlsg2evRZOgXx8pj1U/edit?ts=59a2d56c'>Lower Academy</a>
+      </section>
+
+      <section>
+        <h1>projects</h1>
+        <% @standard_curriculum.each do |project| %>
+          <div class="favorite-in-artroom">
+            <a href="/<%= project.level %>/projects/<%= project.slug %>">
+            <%= image_tag(project.project_set.project_image, size: "100x100") %>
+            <p class="favorite-project-title"><%= project.title %></p>
+            <p class="favorite-academy"><%= project.level.capitalize %> Academy</p>
+            </a>
+          </div>
         <% end %>
-    </section>
+      </section>
+    <% else %>
+     <section>
+        <h1>in progress</h1>
+          <div class="favorite-in-artroom">
+            <% @lesson = Lesson.find_by_id(current_user.last_lesson_id) %>
+            <% if @lesson %>
+              <% @lesson_project = Project.find_by_id(@lesson.project_id) %>
+              <a href="/<%= @lesson.level %>/projects/<%= @lesson_project.slug %>/lessons/<%= @lesson.slug %>">
+                <%= image_tag(@lesson.example_image, size: "100x100") %>
+                <p class="favorite-project-title"><%= @lesson.title %></p>
+                <p class="favorite-academy"><%= @lesson.level.capitalize %> Academy</p>
+              </a>
+            <% end %>
+          </div>
+      </section>
+
+      <section>
+        <h1>★ saved projects</h1>
+        <% current_user.favorites.each do |favorite| %>
+          <div class="favorite-in-artroom">
+            <a href="/<%= favorite.level %>/projects/<%= favorite.slug %>">
+            <%= image_tag(favorite.project_set.project_image, size: "100x100") %>
+            <p class="favorite-project-title"><%= favorite.title %></p>
+            <p class="favorite-academy"><%= favorite.level.capitalize %> Academy</p>
+            </a>
+          </div>
+          <% end %>
+      </section>
+    <% end %>
   </div>
 
   <%= render "shared/feedback" %>
