Style curriculum stuff

--- a/app/assets/stylesheets/artroom.scss
+++ b/app/assets/stylesheets/artroom.scss
@@ -152,6 +152,11 @@
     margin-left:10px;
   }
 
+  div.favorite-project-item {
+    display: inline-block;
+    margin-right: 40px;
+  }
+
 }
 
 .hero-page-title, #artroomModal {
