Add Memberships to nav-bar, move Contact
This is ugly, but temporary. Moving previous "Contact Us" links under
"About Us" to make room for "Memberships", which is actually a link to a
Google Slides presentation.

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -26,16 +26,14 @@
         <div class="dropdown-content">
           <a href="/about" hidden>our story<hr></a>
           <a href="/supporters" hidden>supporters<hr></a>
-          <a href="/team" hidden>team</a>
-        </div>
-      </div>
-      <div class="col-md-2 col-xs-3 dropdown">
-        <a href="/contact">contact us</a>
-        <div class="dropdown-content">
+          <a href="/team" hidden>team<hr></a>
           <a href="/contact" hidden>get in touch<hr></a>
           <a href="http://www.volunteermatch.org/search/org960297.jsp#opportunities_tab" target="blank" hidden>volunteer opportunities<hr></a>
           <a href="/classes" hidden>PDX Classes</a>
         </div>
+      </div>
+      <div class="col-md-2 col-xs-3 dropdown">
+        <a href="https://docs.google.com/presentation/d/1AfvMlOUyWQSiX7zVALBYAnlNHnd77jBzY12I9mT_kYQ/edit#slide=id.gcb9a0b074_1_0">memberships</a>
       </div>
       <div id="nav-donate-btn" class="col-md-2 col-xs-3">
         <a href=<%= donate_link %>>donate</a>
