--- a/app/views/home/memberships.html.erb
+++ b/app/views/home/memberships.html.erb
@@ -1,1 +1,3 @@
-<h1>memberships</h1>
+<div class="memberships">
+  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT6iJmTxd258O_CamQr2M_GPJlNM31UIwJmQsvEPvr1BA16AdtLQrc9q0OfhoMkgESwLh49f9Gn5YuS/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+</div>
