--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="col-md-2 col-xs-3 dropdown">
-        <a href="https://docs.google.com/presentation/d/1AfvMlOUyWQSiX7zVALBYAnlNHnd77jBzY12I9mT_kYQ/edit#slide=id.gcb9a0b074_1_0">memberships</a>
+        <a href="/memberships">memberships</a>
       </div>
       <div id="nav-donate-btn" class="col-md-2 col-xs-3">
         <a href=<%= donate_link %>>donate</a>
