--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -35,8 +35,8 @@
       <div class="col-md-2 col-xs-3 dropdown">
         <a href="/memberships">memberships</a>
       </div>
-      <div id="nav-donate-btn" class="col-md-2 col-xs-3">
-        <a href=<%= donate_link %>>donate</a>
+      <div id="nav-donate-btn" class="col-md-3 col-xs-3">
+        <a href=<%= project_kits_link %>>project kits</a>
       </div>
     </div>
   </div>
