--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,6 +2,10 @@
 <% content_for(:hero_image) { image_tag 'heros/project.jpg' } %>
 
 <div class="projects-index">
+  <div class="project-kit-notification">
+    New! Check out our <a href="<%= project_kits_link %>">Project Kits</a>!
+  </div>
+
   <h1 class="centered">An overview</h1>
 
  <div>
