--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -36,7 +36,7 @@
         <a href="/memberships">memberships</a>
       </div>
       <div id="nav-donate-btn" class="col-md-3 col-xs-3">
-        <a href=<%= project_kits_link %>>project kits</a>
+        <a href="<%= project_kits_link %>">project kits</a>
       </div>
     </div>
   </div>
