--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div id="nav-donate-btn" class="col-md-3 col-xs-3">
-        <a href="<%= project_kits_link %>">project kits</a>
+        <a href="<%= donate_link %>">donate</a>
       </div>
     </div>
   </div>
